--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
 
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size:50px;
@@ -26,4 +27,8 @@ section{
     font-weight: bold;
     padding: 10px 20px;
     border-radius: 5px;
+}
+.top-banner{
+background-image: url(images/top-banner.png);
+background-repeat: no-repeat;
 }
