--- a/style.css
+++ b/style.css
@@ -4,37 +4,26 @@ body{
     margin: 0;
 }
 h1{
-    font-size:50px;
+    font-size:40px;
 }
 .orange-color{
 
 color: orange;
 }
 section{
-
     display: flex;
-    margin-bottom: 100;
-}
+    }
 .half-width{
-    width: 80%;
-    padding: 2%;
+    width:100%;
+    padding: 10px;
 }
 .half-width img{
-    width: 100%;
+    width:80%;
 }
 .link-button{
     text-decoration: none;
-    background-image:linear-gradient(orange,tomato);
+    background-color:tomato;
     font-weight: bold;
     padding: 10px 20px;
     border-radius: 5px;
-}
-.top-banner{
-background-image: url(images/top-banner.png);
-background-repeat: no-repeat;
-}
-.dream-big{
-    background-image:url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
 }
