--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ h1{
 }
 .orange-color{
 
-color: orange;
+color: rgb(241, 167, 30);
 }
 section{
     display: flex;
     }
-.half-width{
+.develop{
     width:100%;
     padding: 10px;
 }
@@ -26,4 +26,10 @@ section{
     font-weight: bold;
     padding: 10px 20px;
     border-radius: 5px;
+}
+.footer{
+    background: black;
+     font-family: 'Brush Script MT', cursive;
+    width:100%;
+   
 }
